--- a/CleanBlog.Core/CleanBlog.Core.csproj
+++ b/CleanBlog.Core/CleanBlog.Core.csproj
@@ -271,6 +271,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\HtmlExtensions.cs" />
+    <Compile Include="Helpers\QueryStringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
