--- a/CleanBlog.Core/CleanBlog.Core.csproj
+++ b/CleanBlog.Core/CleanBlog.Core.csproj
@@ -273,6 +273,7 @@
     <Compile Include="Extensions\HtmlExtensions.cs" />
     <Compile Include="Helpers\QueryStringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ContactViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
