--- a/CleanBlog.Web/Web.config
+++ b/CleanBlog.Web/Web.config
@@ -64,11 +64,11 @@
                 If you need Umbraco to send out system mails (like reset password and invite user),
                 you must configure your SMTP settings here - for example:
             -->
-      <!--
-            <smtp from="noreply@example.com" deliveryMethod="Network">
-                <network host="localhost" port="25" enableSsl="false" userName="" password="" />
-            </smtp>
-            -->
+
+        <smtp from="noreply@example.com" deliveryMethod="Network">
+            <network host="localhost" port="25" enableSsl="false" userName="username" password="password" />
+        </smtp>
+           
     </mailSettings>
   </system.net>
   <system.web>
